css adjusted to prevent commentbox overflow when typing in one long string

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -303,3 +303,7 @@ margin-bottom: 15px;
 .avatar-upvote-box {
 	text-align:center;	
 }
+
+.comment-box p {
+	overflow-wrap: break-word;
+}
